Texts, images and minor changes

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
             <div>
                 <h1 class="appearScroll title">
-                    Tobias Schnackenberg.<br/>Softwaregestalter aus Bremen.
+                    Tobias Schnackenberg.<br/>Webgestalter aus Bremen.
                 </h1>  
                 <p class="intro appearScroll">
-                    Moin. Ich helfe dir gerne dabei dein digitales Produkt zu erstellen oder zu überarbeiten. Dabei sind mir die Bereiche <b>Webdesign</b>, <b>User Experience Design</b> und <b>Gestaltung</b> besonders wichtig.
+                    Moin. Ich bin Tobi und ich gestalte und entwickle Dein nächstes digitales Produkt. <b>Webdesign</b>, <b>User Experience Design</b> und <b>Gestaltung</b> sind mir dabei besonders wichtig.
                 </p>
             </div>
            
@@ -57,41 +57,19 @@
                 </div>
 
         </section>
-        <section class="shopanion">
-            <div>
-                <h1 class="appearScroll" id="start">Auszüge meiner Arbeiten</h1>
-                <h2 class="appearScroll">iOS-App "shopanion"</h2>
-                <p class="appearScroll">shopanion ist eine mobile App für iOS-Geräte, die dir deinen Wocheneinkauf vereinfacht. Anders als eine gewöhnliche Einkaufsliste lernt die App die Reihenfolge, in der du deine Produkte einkaufst und passt ihre Reihenfolge daraufhin an. Die gelernte Reihenfolge verbessert sich von Einkauf zu Einkauf, sodass sich deine Liste pro Einkaufsladen fortlaufend besser sortiert.
-            </div>
-            <div class="grid-container">
-                    <div class="grid">
-                        <img src="assets/images/shopanion1.png" class="appearScroll" id="shopanion1" onClick="showLightbox(this.id)">
-                        <img src="assets/images/shopanion2.png" class="appearScroll" id="shopanion2" onClick="showLightbox(this.id)">
-                        <img src="assets/images/shopanion3.png" class="appearScroll" id="shopanion3" onClick="showLightbox(this.id)">
-                        <img src="assets/images/shopanion4.png" class="appearScroll" id="shopanion4" onClick="showLightbox(this.id)">
-                        <img src="assets/images/shopanion5.png" class="appearScroll" id="shopanion5" onClick="showLightbox(this.id)">
-                    </div>
-                </div>
-                <div>
-                    <ul class="tags appearScroll">
-                        <li>#interfacedesign</li>
-                        <li>#icondesign</li>
-                        <li>#nativeApp</li>
-                        <li>#softwareentwicklung</li>
-                        <li>#iOS</li>
-                        <li>#swift</li>
-                    </ul>
-                </div>
-        </section>
 
         <section class="illustration">
             <div>
-                <h2 class="appearScroll">Illustrationen</h2>
+                <h1 class="appearScroll" id="start">Auszüge meiner Arbeiten</h1>
+                <h2 class="appearScroll">Illustration und Grafik</h2>
             </div>
             <div>
                 <p class="appearScroll">
-                    Ich erstelle handgefertigte Illustrationen, Icons und Logos um Ideen und Gedanken für jeden verständlich zu kommunizieren.
-                    Individuell gestaltete Digitalprodukte heben sich von der Masse ab.
+                    Ich erstelle Illustrationen, Icons und Logos um Ideen und Gedanken für jedermann verständlich zu kommunizieren. 
+                    Illustrationen betten sich in digitale Produkte ein und machen sie einzigartig.
+                </p>
+                <p class="appearScroll">
+                    Weitere Arbeiten teile ich auf <a href="https://dribbble.com/sir_tobi_" target="blank">dribbble</a>.
                 </p>
             </div>
             <div class="grid-container">
@@ -107,12 +85,12 @@
                 <ul class="tags appearScroll">
                     <li>#digitalkunst</li>
                     <li>#icon</li>
+                    <li>#logo</li>
                     <li>#procreate</li>
                     <li>#sketchapp</li>
                 </ul>
             </div>
         </section>
-
         <section class="webdesign">
             <div>
                 <h2 class="appearScroll">Web Design</h2>
@@ -140,15 +118,47 @@
             </div>
         </section>
 
+        <section class="shopanion">
+            <div>
+                <h2 class="appearScroll">App Design</h2>
+                <p class="appearScroll">shopanion ist eine mobile App für iOS-Geräte, die dir deinen Wocheneinkauf vereinfacht. Anders als eine gewöhnliche Einkaufsliste lernt die App die Reihenfolge, in der du deine Produkte einkaufst und passt ihre Reihenfolge daraufhin an. Die gelernte Reihenfolge verbessert sich von Einkauf zu Einkauf, sodass sich deine Liste pro Einkaufsladen fortlaufend besser sortiert. shopanion wurde von mir gestaltet und entwickelt.
+            </div>
+            <div class="grid-container">
+                    <div class="grid">
+                        <img src="assets/images/shopanion1.png" class="appearScroll" id="shopanion1" onClick="showLightbox(this.id)">
+                        <img src="assets/images/shopanion2.png" class="appearScroll" id="shopanion2" onClick="showLightbox(this.id)">
+                        <img src="assets/images/shopanion3.png" class="appearScroll" id="shopanion3" onClick="showLightbox(this.id)">
+                        <img src="assets/images/shopanion4.png" class="appearScroll" id="shopanion4" onClick="showLightbox(this.id)">
+                        <img src="assets/images/shopanion5.png" class="appearScroll" id="shopanion5" onClick="showLightbox(this.id)">
+                    </div>
+                </div>
+                <div>
+                    <ul class="tags appearScroll">
+                        <li>#interfacedesign</li>
+                        <li>#icondesign</li>
+                        <li>#nativeApp</li>
+                        <li>#softwareentwicklung</li>
+                        <li>#iOS</li>
+                        <li>#swift</li>
+                    </ul>
+                </div>
+        </section>
+
         <section class="social-media">
             <div>
                 <h2 class="appearScroll">
-                    Soziale Medien
+                    Kontakt
                 </h2>  
                 <p class="appearScroll">
-                    Schau doch mal vorbei. Viele meiner Arbeiten teile ich auf Twitter und dribbble.
+                    Du möchtest ein spannendes Projekt umsetzen oder wir sollten uns einfach so mal kennen lernen? Kontaktier mich gerne per E-Mail oder
+                    schau auf meinen Social Media Profilen bei Twitter und dribbble vorbei.
                 </p>
             </div>
+
+            <div class="contact">
+                <a class="contact contact-button button appearScroll">Kontakt</a>
+            </div>
+
             <div class="social">
                 <a href="https://twitter.com/sir_tobi_" target="blank" class="twitter appearScroll">
                     <img src="assets/social/twitter.png">
@@ -157,6 +167,7 @@
                     <img src="assets/social/dribbble.png">
                 </a>
             </div>
+
         </section>
 
     </div>
