--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tobias Schnackenberg. Softwaredesigner.</title>
+    <link rel="shortcut icon" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="96x96">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="mstile-144x144.png">
+    <meta name="description" content="Moin. Ich bin Tobi und ich gestalte und entwickle Dein nächstes digitales Produkt. Webdesign, User Experience Design und Gestaltung sind mir dabei besonders wichtig." />
+    
+    <title>Tobias Schnackenberg. Webgestalter aus Bremen.</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
   </head>
   <body>
