--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
             <div>
                 <h1 class="appearScroll title">
-                    Tobias Schnackenberg.<br/>Webgestalter aus Bremen.
+                    Moin. Ich bin Tobi,<br/>Webgestalter aus Bremen.
                 </h1>  
                 <p class="intro appearScroll">
-                    Moin. Ich bin Tobi und ich gestalte und entwickle Dein nächstes digitales Produkt. <b>Webdesign</b>, <b>User Experience Design</b> und <b>Gestaltung</b> sind mir dabei besonders wichtig.
+                    Du hast ein tolles Projekt, bei dem Du Unterstützung in den Bereichen <b>Design</b> oder <b>Web-Entwicklung</b> brauchst? Schreib mir und wir quatschen mal drüber!
                 </p>
             </div>
            
@@ -94,8 +94,8 @@
                     <li>#digitalkunst</li>
                     <li>#icon</li>
                     <li>#logo</li>
-                    <li>#procreate</li>
-                    <li>#sketchapp</li>
+                    <li>#grafikdesign</li>
+                    <li>#illustration</li>
                 </ul>
             </div>
         </section>
