--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="mstile-144x144.png">
-    <meta name="description" content="Moin. Ich bin Tobi und ich gestalte und entwickle Dein nächstes digitales Produkt. Webdesign, User Experience Design und Gestaltung sind mir dabei besonders wichtig." />
+    <meta name="description" content="Du hast ein tolles Projekt, bei dem Du Unterstützung in den Bereichen Design oder Web-Entwicklung brauchst? Schreib mir und wir quatschen mal drüber!" />
     
-    <title>Tobias Schnackenberg. Webgestalter aus Bremen.</title>
+    <title>Tobias Schnackenberg</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
   </head>
   <body>
@@ -52,7 +52,7 @@
             </div>
            
             <div class="contact">
-                <a class="contact contact-button button appearScroll">Kontakt</a>
+                <a class="contact contact-button button appearScroll" onclick="sendMail(); return false">Kontakt</a>
             </div>
 
             <div class="social">
@@ -74,8 +74,7 @@
             <div>
                 <p class="appearScroll">
                     Ich erstelle Illustrationen, Icons und Logos um Ideen und Gedanken für jedermann verständlich zu kommunizieren. 
-                    Illustrationen betten sich in digitale Produkte ein und machen sie einzigartig.
-                </p>
+                    Die Werke betten sich in Dein digitales Produkt ein und machen es einzigartig.
                 <p class="appearScroll">
                     Weitere Arbeiten teile ich auf <a href="https://dribbble.com/sir_tobi_" target="blank">dribbble</a>.
                 </p>
@@ -164,7 +163,7 @@
             </div>
 
             <div class="contact">
-                <a class="contact contact-button button appearScroll">Kontakt</a>
+                <a class="contact contact-button button appearScroll" onclick="sendMail(); return false">Kontakt</a>
             </div>
 
             <div class="social">
