--- a/index.html
+++ b/index.html
@@ -3,28 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.png">
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="favicon.png" sizes="96x96">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="mstile-144x144.png">
-    <meta name="description" content="Du hast ein tolles Projekt, bei dem Du Unterstützung in den Bereichen Design oder Web-Entwicklung brauchst? Schreib mir und wir quatschen mal drüber!" />
-    
     <title>Tobias Schnackenberg</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
   </head>
   <body>
-      <div class="landing">
-        <div class="header-container"></div>
-      </div>
-      <div class="arrow-pulse"></div>
-      <a href="#start">
-        <div class="arrow-down-container">
-            <p>
-                <i class="arrow-down"></i>
-            </p>
-        </div>
+      <div class="landing"></div>
+      <div class="appearScroll">
+        <a href="#start">
+            <img class="arrow-pulse" src="./assets/images/arrows.png">
+        </a>
     </a>
       <div class="lightbox" id = "lightbox" onClick="closeLightbox()">
         <div class="lightbox-container">
@@ -44,23 +31,24 @@
 
             <div>
                 <h1 class="appearScroll title">
-                    Moin. Ich bin Tobi,<br/>Webgestalter aus Bremen.
+                    Moin! Ich bin Tobi,<br/>ein Webgestalter aus Bremen.
                 </h1>  
                 <p class="intro appearScroll">
-                    Du hast ein tolles Projekt, bei dem Du Unterstützung in den Bereichen <b>Design</b> oder <b>Web-Entwicklung</b> brauchst? Schreib mir und wir quatschen mal drüber!
+                        Du hast ein krasses Projekt, bei dem Du Unterstützung in den Bereichen <b>Design</b> oder <b>Web-Entwicklung</b> benötigst?
+                        <br><br>
+                        Lass mal von Dir hören!
                 </p>
             </div>
-           
             <div class="contact">
-                <a class="contact contact-button button appearScroll" onclick="sendMail(); return false">Kontakt</a>
+                <a class="contact contact-button button appearScroll"><img class="mail-icon" src="assets/images/mail.png">Moin mich an</a>
             </div>
 
             <div class="social">
                     <a href="https://twitter.com/sir_tobi_" target="blank" class="twitter appearScroll">
-                        <img src="assets/social/twitter.png">
+                        <img src="assets/images/twitter.png">
                     </a>
                     <a href="https://dribbble.com/sir_tobi_" target="blank" class="dribbble appearScroll">
-                        <img src="assets/social/dribbble.png">
+                        <img src="assets/images/dribbble.png">
                     </a>
                 </div>
 
@@ -74,7 +62,8 @@
             <div>
                 <p class="appearScroll">
                     Ich erstelle Illustrationen, Icons und Logos um Ideen und Gedanken für jedermann verständlich zu kommunizieren. 
-                    Die Werke betten sich in Dein digitales Produkt ein und machen es einzigartig.
+                    Illustrationen betten sich in digitale Produkte ein und machen sie einzigartig.
+                </p>
                 <p class="appearScroll">
                     Weitere Arbeiten teile ich auf <a href="https://dribbble.com/sir_tobi_" target="blank">dribbble</a>.
                 </p>
@@ -93,8 +82,8 @@
                     <li>#digitalkunst</li>
                     <li>#icon</li>
                     <li>#logo</li>
-                    <li>#grafikdesign</li>
-                    <li>#illustration</li>
+                    <li>#procreate</li>
+                    <li>#sketchapp</li>
                 </ul>
             </div>
         </section>
@@ -157,13 +146,13 @@
                     Kontakt
                 </h2>  
                 <p class="appearScroll">
-                    Du möchtest ein spannendes Projekt umsetzen oder wir sollten uns einfach so mal kennen lernen? Kontaktier mich gerne per E-Mail oder
+                    Du möchtest ein cooles Projekt umsetzen oder wir sollten uns einfach so mal kennen lernen? Kontaktier mich gerne per E-Mail oder
                     schau auf meinen Social Media Profilen bei Twitter und dribbble vorbei.
                 </p>
             </div>
 
             <div class="contact">
-                <a class="contact contact-button button appearScroll" onclick="sendMail(); return false">Kontakt</a>
+                 <a class="contact contact-button button appearScroll"><img class="mail-icon" src="assets/images/mail.png">Schreib mir</a>
             </div>
 
             <div class="social">
