--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 
             <div class="social">
                 <a href="https://twitter.com/sir_tobi_" target="blank" class="twitter appearScroll">
-                    <img src="assets/social/twitter.png">
+                    <img src="assets/images/twitter.png">
                 </a>
                 <a href="https://dribbble.com/sir_tobi_" target="blank" class="dribbble appearScroll">
-                    <img src="assets/social/dribbble.png">
+                    <img src="assets/images/dribbble.png">
                 </a>
             </div>
 
