--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Tobias Schnackenberg. Webgestalter aus Bremen für Design und Web-Entwicklung.">
+    <meta name="keywords" content="web design, webdesign, homepage, webseite, website, webgestaltung, design, logo design">
+
     <title>Tobias Schnackenberg</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
+    <link rel="icon" type="image/png" href="(favicon.png">
   </head>
   <body>
       <div class="landing"></div>
@@ -31,12 +37,12 @@
 
             <div>
                 <h1 class="appearScroll title">
-                    Moin! Ich bin Tobi,<br/>ein Webgestalter aus Bremen.
+                    Moin! Ich bin Tobi<br/>und ich bin ein Webgestalter<br/>aus Bremen.
                 </h1>  
                 <p class="intro appearScroll">
                         Du hast ein krasses Projekt, bei dem Du Unterstützung in den Bereichen <b>Design</b> oder <b>Web-Entwicklung</b> benötigst?
-                        <br><br>
-                        Lass mal von Dir hören!
+                        <br/><br/>
+                        Dann sollten wir uns kennenlernen!
                 </p>
             </div>
             <div class="contact">
@@ -168,7 +174,6 @@
 
     </div>
     <footer>
-        <div class="footer-container"></div>
         <div class="bottom-row">
             <p>Gestaltet von Tobias Schnackenberg.</p>
             <p>
