Favicon, small changes

--- a/impressum.html
+++ b/impressum.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="description" content="Tobias Schnackenberg. Webgestalter aus Bremen für Design und Web-Entwicklung.">
+    <meta name="keywords" content="web design, webdesign, homepage, webseite, website, webgestaltung, design, logo design">
+
     <link rel="shortcut icon" href="favicon.png">
     <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon.png" sizes="96x96">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="mstile-144x144.png">
-    <meta name="description" content="Du hast ein tolles Projekt, bei dem Du Unterstützung in den Bereichen Design oder Web-Entwicklung brauchst? Schreib mir und wir quatschen mal drüber!" />
 
     <title>Tobias Schnackenberg</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
+    <link rel="icon" type="image/png" href="(favicon.png">
 </head>
 <body>
 <div class="header-container-rel"></div>
