--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <meta name="description" content="Tobias Schnackenberg. Webgestalter aus Bremen für Design und Web-Entwicklung.">
     <meta name="keywords" content="web design, webdesign, homepage, webseite, website, webgestaltung, design, logo design">
 
+    <link rel="shortcut icon" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="96x96">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="mstile-144x144.png">
+
     <title>Tobias Schnackenberg</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <link rel="icon" type="image/png" href="(favicon.png">
