--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <link rel="icon" type="image/png" href="(favicon.png">
   </head>
   <body>
-      <div class="landing"></div>
-      <div class="appearScroll">
+    <div class="landing"></div>
+    <div class="appearScroll">
         <a href="#start">
             <img class="arrow-pulse" src="./assets/images/arrows.png">
         </a>
-    </a>
+    </div>
+
       <div class="lightbox" id = "lightbox" onClick="closeLightbox()">
         <div class="lightbox-container">
             <span class="lightbox-close">
@@ -35,7 +36,6 @@
             <img src="./assets/images/illustration1.png" class="lightbox-img" id="lightbox-img"> 
         </div>
       </div>
-
         <div class="container">
         <section class="hello">
             <div class="hero-container appearScroll">
