fix mobile landscape view

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="icon" type="image/png" href="(favicon.png">
   </head>
   <body>
-    <div class="landing"></div>
 
       <div class="lightbox" id = "lightbox" onClick="closeLightbox()">
         <div class="lightbox-container">
@@ -31,6 +30,7 @@
             <img src="./assets/images/illustration1.png" class="lightbox-img" id="lightbox-img"> 
         </div>
       </div>
+      <div class="landing">
         <div class="container">
         <section class="hello">
             <div class="hero-container appearScroll">
@@ -39,10 +39,10 @@
 
             <div>
                 <h1 class="appearScroll title">
-                    Moin! Ich bin Tobi<br/>und ich bin ein Webgestalter<br/>aus Bremen.
+                    Moin! Ich bin Tobias.<br/>Ich bin ein Webgestalter<br/>aus Bremen.
                 </h1>  
                 <p class="intro appearScroll">
-                        Du hast ein krasses Projekt, bei dem Du Unterstützung in den Bereichen <b>Design</b> oder <b>Web-Entwicklung</b> benötigst?
+                        Du hast ein cooles Projekt, bei dem Du Unterstützung in den Bereichen <b>Design</b> oder <b>Web-Entwicklung</b> benötigst?
                         <br/><br/>
                         Dann sollten wir uns kennenlernen!
                 </p>
@@ -64,8 +64,10 @@
                     <img class="arrow-pulse" src="./assets/images/arrows.png">
                 </a>
             </div>
-
         </section>
+    </div>
+</div>
+<div class="container">
 
         <section class="illustration">
             <div>
