--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="mstile-144x144.png">
 
+    <meta name="google-site-verification" content="uBhsoTIdkkXzX3B1Vq6T5WL-OSGpgCr-KCOhvnHi5u8" />
+
     <title>Tobias Schnackenberg</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <link rel="icon" type="image/png" href="(favicon.png">
