Fix Mail Sending

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </p>
             </div>
             <div class="contact">
-                <a class="contact contact-button button appearScroll"><img class="mail-icon" src="assets/images/mail.png">Moin mich an</a>
+                <a class="contact contact-button button appearScroll" onclick="sendMail()"><img class="mail-icon" src="assets/images/mail.png">Moin mich an</a>
             </div>
 
             <div class="social">
@@ -167,7 +167,7 @@
             </div>
 
             <div class="contact">
-                 <a class="contact contact-button button appearScroll"><img class="mail-icon" src="assets/images/mail.png">Schreib mir</a>
+                 <a class="contact contact-button button appearScroll" onclick="sendMail()"><img class="mail-icon" src="assets/images/mail.png">Schreib mir</a>
             </div>
 
             <div class="social">
