Fix Mail Button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </p>
             </div>
             <div class="contact">
-                <a class="contact contact-button button appearScroll"><img class="mail-icon" id ="mail-icon2" src="assets/images/mail.png">Moin mich an</a>
+                <a onclick="sendMail()" class="contact contact-button button appearScroll"><img class="mail-icon" id ="mail-icon2" src="assets/images/mail.png"">Moin mich an</a>
             </div>
 
             <div class="social">
@@ -170,7 +170,7 @@
             </div>
 
             <div class="contact">
-                 <a class="contact contact-button button appearScroll"><img class="mail-icon" id ="mail-icon" src="assets/images/mail.png">Schreib mir</a>
+                 <a onclick="sendMail()" class="contact contact-button button appearScroll"><img class="mail-icon" id ="mail-icon" src="assets/images/mail.png">Schreib mir</a>
             </div>
 
             <div class="social">
