Added clock, plants, shelf. New hero image.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
     <title>Tobias Schnackenberg</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
-    <link rel="icon" type="image/png" href="(favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body id="body">
+    <img class="clock appearScroll" id="clock" src="./assets/images/clock.png"/>
+    <img class="shelf appearScroll" id="shelf" src="./assets/images/shelf.png"/>
+    <img class="plants appearScroll" id="plants" src="./assets/images/plants.png"/>
       <div class="lightbox" id = "lightbox" onClick="closeLightbox()">
         <div class="lightbox-container">
             <span class="lightbox-close">
@@ -34,15 +37,17 @@
       </div>
       <div class="landing" id="landing">
         <div class="container">
+            
         <section class="hello">
             <div>
                 <h1 class="appearScroll title">
-                    Moin! Ich bin Tobias.<br/>Und ich bin Webgestalter<br/>aus Bremen.
+                    Moin. Ich bin Tobias.<br/>Und ich bin Webgestalter<br/>aus Bremen.
                 </h1>  
                 <p class="intro appearScroll">
-                        Du hast ein cooles Projekt, bei dem Du Unterstützung in den Bereichen <b>Design</b> oder <b>Web-Entwicklung</b> benötigst?
-                        <br/><br/>
-                        Dann sollten wir uns kennenlernen!
+                    Du hast ein cooles Projekt, bei dem Du Unterstützung in den Bereichen <b>Web-</b> oder <b>Grafikdesign</b> benötigst?
+                </p>
+                <p class="intro appearScroll">
+                    Dann sollten wir uns kennenlernen.
                 </p>
             </div>
             <div class="contact">
@@ -75,7 +80,7 @@
         <section class="illustration">
             <div>
                 <h1 class="appearScroll" id="start">Auszüge meiner Arbeiten</h1>
-                <h2 class="appearScroll">Illustration und Grafik</h2>
+                <h2 class="appearScroll">Grafikdesign und Illustration</h2>
             </div>
             <div>
                 <p class="appearScroll">
@@ -97,7 +102,6 @@
             </div>
             <div>
                 <ul class="tags appearScroll">
-                    <li>#digitalkunst</li>
                     <li>#icon</li>
                     <li>#logo</li>
                     <li>#procreate</li>
