--- a/impressum.html
+++ b/impressum.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <link rel="icon" type="image/png" href="(favicon.png">
 </head>
-<body>
+<body id="body">
 <div class="header-container-rel"></div>
 <div class="container">
 <section class="impressum">
@@ -59,5 +59,6 @@ Kommodore-Johnsen-Boulevard 34<br />
             </p>
         </div>
     </footer>
+    <script language="javascript" type="text/javascript" src="src/moment.js"></script>
     <script language="javascript" type="text/javascript" src="src/script.js"></script>
   </body>
